fix recommendation shifts

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -141,10 +141,10 @@
 	text-align: center;
 }
 
-.right_side .list-group tr {
+/*.right_side .list-group tr {
 	background-color: red;
 	margin: none;
-}
+}*/
 .right_side .list-group .panel-body{
 	width: 195px;
 }
